--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ input[type='number']::-webkit-outer-spin-button {
 input[type='radio'] {
   accent-color: rgb(109 40 217);
 }
+
+button:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
