--- a/src/index.css
+++ b/src/index.css
@@ -10,36 +10,25 @@
   outline-color: #8d66cc;
 }
 
-::-webkit-scrollbar {
+.sidebar-scrollbar::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+.sidebar-scrollbar::-webkit-scrollbar-track {
   background: #f4f4f4;
 }
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+.sidebar-scrollbar::-webkit-scrollbar-thumb {
   background: #e4e4e4;
   border-radius: 8px;
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+.sidebar-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #d4d4d4;
-}
-
-@layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
 }
 
 table {
