Apply nowrap to table fields

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,11 @@ table > thead > tr {
   border: 1px solid #e2e8f0 !important;
 }
 
+table th,
+table td {
+  white-space: nowrap;
+}
+
 /* Table ID */
 table > tbody > tr > td:first-child {
   color: rgb(108, 122, 145) !important;
