--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,6 @@
   outline-color: #ccc;
 }
 
-input[type='file'] {
-  font-size: 15px;
-  color: #555;
-  cursor: pointer;
-}
-
 ::-webkit-file-upload-button {
   font-size: 15px;
   color: #555;
@@ -93,6 +87,18 @@ input[type='number']::-webkit-outer-spin-button {
 
 input[type='radio'] {
   accent-color: rgb(109 40 217);
+}
+
+input[type='file'] {
+  font-size: 15px;
+  color: #555;
+  cursor: pointer;
+}
+
+input[readonly] {
+  background-color: #eee;
+  border: #eee;
+  outline: none;
 }
 
 button[disabled] {
