--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 input[type='radio'] {
-  accent-color: rgb(109 40 217);
+  accent-color: #5054a2;
 }
 
 input[type='file'] {
