--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,10 @@ button[disabled] {
   cursor: not-allowed;
 }
 
+button {
+  transition: all 150ms;
+}
+
 .custom-select-arrow::before,
 .custom-select-arrow::after {
   content: '';
